# pont-facturx

./: .editorconfig  .gitignore  FACTUR_X_SPEC.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MISTRAL_API_KEY_SETUP.md  PROCESS.md  QUICK_REFERENCE.md  README_FACTUR_X.md  confirm.json  docker-compose.yml
.github/workflows/: deploy-backend.yml  publish-images-scaleway.yml
api/: Dockerfile.api  Dockerfile.worker  MAILING_DOCUMENTATION.md  pyproject.toml
api/app/: config.py  db.py  email_service.py  email_service_backup.py  email_service_old.py  main.py  models.py  schemas.py  security.py  storage.py
api/app/pipeline/: cii_builder.py  extract.py  facturx_wrap.py  final_json_validate.py  pdfa.py  schematron.py  validate.py
api/app/routes/: invoices.py
api/app/static/: index.html
api/app/templates/: cii_basic_wl.xml.j2  cii_en16931.xml.j2
api/app/validators/: README.md
api/app/workers/: celery_app.py  tasks.py
deploy/: CI_DEPLOY.md  Caddyfile  README_DEPLOY.md  docker-compose.prod.yml
docs/: brainstorming-session-results.md
pont-facturx/: Makefile  README.md  docker-compose.yml
pont-facturx/api/: .env  Dockerfile.api
pont-facturx/scripts/: bootstrap_en16931.sh
scripts/: doctor.sh
webapp/: .gitignore  .prettierignore  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PDF_A3_IMPLEMENTATION.md  PDF_A3_QUICK_REFERENCE.md  README.md  env.production.example  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
webapp/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
(+98 files in other folders)
